Fix text contrast in cards

--- a/src/index.css
+++ b/src/index.css
@@ -53,19 +53,19 @@ All colors MUST be HSL.
     --foreground: 0 0% 95%;
 
     --card: 0 0% 100%;
-    --card-foreground: 0 0% 10%;
+    --card-foreground: 96 100% 6%;
 
     --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 10%;
+    --popover-foreground: 96 100% 6%;
 
-    --primary: 0 0% 10%;
+    --primary: 96 100% 6%;
     --primary-foreground: 0 0% 100%;
 
     --secondary: 210 15% 88%;
-    --secondary-foreground: 0 0% 10%;
+    --secondary-foreground: 96 100% 6%;
 
     --muted: 0 0% 50%;
-    --muted-foreground: 0 0% 35%;
+    --muted-foreground: 96 100% 15%;
 
     --accent: 210 60% 65%;
     --accent-foreground: 0 0% 100%;
